syntax = "proto3";

package eventstream.v1;

option go_package = "kwikmedical-eventstream/proto";

import "cloudevents.proto";
import "google/protobuf/empty.proto";

service EventStreamV1 {
  rpc PublishEvent(io.cloudevents.v1.CloudEvent) returns (PublishEventResponse);

  rpc SubscribeToEvents(SubscriptionRequest) returns (stream io.cloudevents.v1.CloudEvent);

  // unsubscribe from events (for dynamic subscribers)
  rpc Unsubscribe(UnsubscribeRequest) returns (google.protobuf.Empty);
}

message SubscriptionRequest {
  repeated string types = 1;   // event types (e.g., "com.example.patients.created")
  string source = 2;
  string subject = 3;
  string consumer_id = 4;
}

message PublishEventResponse {
  string id = 1;
  bool success = 2;            // indicates if the publish operation succeeded
  string error_message = 3;    // optional
}

message UnsubscribeRequest {
  string consumer_id = 1;
}
